objects/PC_SupportPlanActivity__c.object
<CustomObject>
    <description>Custom object in Patient Connect to store template activities for a Support Plan.</description>
    <fields>
        <fullName>PC_ActionClass__c</fullName>
        <description>Stores the action class name from the custom metadata, relevant to the automated task.</description>
        <label>Action Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ActivitySequence__c</fullName>
        <description>Internal Activity Number of an activity sequence to which the activity belongs.</description>
        <label>Activity Sequence</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ActivityType__c</fullName>
        <description>Type of activity:
•	User Task: The user must complete the activity.
•	System Task: Automatically executed by Patient Connect.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Task</fullName>
                </value>
                <value>
                    <fullName>Automation Task</fullName>
                </value>
                <value>
                    <fullName>Create Record</fullName>
                </value>
                <value>
                    <fullName>Publish Platform Event</fullName>
                </value>
                <value>
                    <fullName>Update Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_AlternateActivity__c</fullName>
        <description>Internal Activity Number of an alternative activity in case of parallel flows</description>
        <label>Alternate Activity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ApexCondition__c</fullName>
        <description>API name of an Apex class to indicate a Start Condition for an activity. This class must return a Boolean.</description>
        <label>Apex Class Condition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Assign_To_Role__c</fullName>
        <label>Assign To Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_AutomationTaskJSON__c</fullName>
        <label>Automation Task JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Category__c</fullName>
        <description>Whether activity is an independent activity or an Activity Sequence</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>Alt. Funding</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Copay</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Support Check-In</fullName>
                </value>
                <value>
                    <fullName>Field Activity</fullName>
                </value>
                <value>
                    <fullName>Patient Enrollment</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Referral</fullName>
                </value>
                <value>
                    <fullName>Treatment Reminder</fullName>
                </value>
                <value>
                    <fullName>Welcome Gesture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Channel__c</fullName>
        <description>Indicates the communication channel used for the activity.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ClonedFrom__c</fullName>
        <description>The PC_InternalActivityNumber__c of the original Support Plan Activity</description>
        <label>Cloned From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ConditionBehavior__c</fullName>
        <description>Indicates how the Start Condition should be treated: 
 -Wait Until True: The Support Plan will stay on the current activity unless a Start Condition is met.
 -No Condition: There is no condition on the Support Plan activity and hence can be created/executed.</description>
        <label>Condition Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Condition</fullName>
                    <default>true</default>
                    <label>No Condition</label>
                </value>
                <value>
                    <fullName>Wait until True</fullName>
                </value>
                <value>
                    <fullName>Skip if False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ConditionOption__c</fullName>
        <description>Indicates the method of defining the Start Condition.</description>
        <label>Condition Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_ConditionBehavior__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Conditional Builder</fullName>
                    <label>Condition Builder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Conditional_Logic__c</fullName>
        <description>For internal use to store how should multiple conditions being defined on Support Plan Activity/Group be evaluated.</description>
        <label>Conditional Logic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>Provides the description about a Support Plan activity.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_GroupActivityExecution__c</fullName>
        <label>Group Activity Execution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All at once</fullName>
                </value>
                <value>
                    <fullName>In sequence</fullName>
                    <default>true</default>
                    <label>In sequence</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_InitialSequenceActivity__c</fullName>
        <description>Internal Activity Number of the first activity in an activity sequence.</description>
        <label>Initial Sequence Activity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_InternalActivityNumber__c</fullName>
        <description>Auto generated unique ID for a Support Plan activity. It can also be used for migrating across orgs.</description>
        <externalId>true</externalId>
        <label>Internal Activity Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_InternalActivityType__c</fullName>
        <description>Internal field that indicates the type of task . Only used for development purpose.
- User Task: Task that requires manual intervention.
- Sequence: Group of tasks
- Sequence Task: Task is a part of a group</description>
        <label>Internal Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Task</fullName>
                </value>
                <value>
                    <fullName>Sequence</fullName>
                </value>
                <value>
                    <fullName>Sequence Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_NextActivityNumber__c</fullName>
        <description>Internal activity number for the next activity that the current activity points to.</description>
        <label>Next Activity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Operators__c</fullName>
        <description>Operators used on the Conditional Builder</description>
        <label>Operators</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Operators</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Priority__c</fullName>
        <description>Priority of the generated activity.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ReferenceDate__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <description>Date when an activity is created or executed.</description>
        <label>Reference Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ReferenceOffsetUnit__c</fullName>
        <description>Offset unit for Reference Offset.</description>
        <label>Reference Offset Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                    <default>true</default>
                    <label>Days</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ReferenceOffset__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Offset on Reference Date to create or execute an activity.</description>
        <label>Reference Offset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ReferenceType__c</fullName>
        <description>The method that determines how a Reference offset is applied to the Reference Date.</description>
        <label>Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Reference Date</fullName>
                </value>
                <value>
                    <fullName>After Reference Date</fullName>
                </value>
                <value>
                    <fullName>After completion of previous activity</fullName>
                    <default>true</default>
                    <label>After completion of previous activity</label>
                </value>
                <value>
                    <fullName>Activity Creation Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_SubType__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Subject__c</fullName>
        <description>The subject of the generated activity.</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Support Plan to which an activity or an activity sequence belongs.</description>
        <label>Support Plan</label>
        <referenceTo>PC_SupportPlan__c</referenceTo>
        <relationshipLabel>Support Plan Activities</relationshipLabel>
        <relationshipName>Support_Plan_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_UserTask_Fields__c</fullName>
        <description>JSON String to store provided values for various User Task fields.</description>
        <label>User Task Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Support Plan Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PC_SupportPlan__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>PC_InternalActivityNumber__c</columns>
        <columns>NAME</columns>
        <columns>PC_Subject__c</columns>
        <columns>PC_ActivityType__c</columns>
        <columns>PC_NextActivityNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Plan Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>